--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@tanstack/router-devtools": "^1.89.2",
     "class-variance-authority": "^0.7.1",
     "cmdk": "^1.0.4",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "embla-carousel-react": "^8.5.1",
     "framer-motion": "^11.14.4",
