--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@tanstack/react-router": "^1.89.2",
     "@tanstack/react-virtual": "^3.11.1",
     "@tanstack/router-devtools": "^1.89.2",
+    "@types/react-grid-layout": "^1.3.5",
     "class-variance-authority": "^0.7.1",
     "cmdk": "^1.0.4",
     "date-fns": "^4.1.0",
@@ -63,6 +64,7 @@
     "react": "^19.0.0",
     "react-day-picker": "^9.4.3",
     "react-dom": "^19.0.0",
+    "react-grid-layout": "^1.5.0",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.0",
