--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "rsbuild preview"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
     "@rsbuild/core": "^1.0.2",
     "@rsbuild/plugin-react": "^1.0.1",
     "@tailwindcss/container-queries": "^0.1.1",
@@ -50,10 +51,13 @@
     "@tanstack/react-router": "^1.89.2",
     "@tanstack/react-virtual": "^3.11.1",
     "@tanstack/router-devtools": "^1.89.2",
+    "@types/event-source-polyfill": "^1.0.5",
     "class-variance-authority": "^0.7.1",
     "cmdk": "^1.0.4",
+    "comfyui-json": "^0.1.31",
     "dayjs": "^1.11.13",
     "embla-carousel-react": "^8.5.1",
+    "event-source-polyfill": "^1.0.31",
     "framer-motion": "^11.14.4",
     "lucide-react": "^0.468.0",
     "next-themes": "^0.4.4",
@@ -70,6 +74,7 @@
     "tailwind-merge": "^2.5.5",
     "use-debounce": "^10.0.4",
     "use-resize-observer": "^9.1.0",
+    "usehooks-ts": "^3.1.0",
     "vaul": "^1.1.2",
     "zustand": "^5.0.2"
   }
