--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.20.2",
+    "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.3",
     "@radix-ui/react-avatar": "^1.1.2",
@@ -51,12 +52,13 @@
     "@tanstack/react-router": "^1.89.2",
     "@tanstack/react-virtual": "^3.11.1",
     "@tanstack/router-devtools": "^1.89.2",
-    "date-fns": "^4.1.0",
     "comfyui-json": "^0.1.31",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "embla-carousel-react": "^8.5.1",
     "event-source-polyfill": "^1.0.31",
     "framer-motion": "^11.14.4",
+    "json-diff-ts": "^4.1.0",
     "lucide-react": "^0.468.0",
     "next-themes": "^0.4.4",
     "nuqs": "^2.2.3",
@@ -67,6 +69,7 @@
     "react-grid-layout": "^1.5.0",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
+    "react-use-websocket": "^4.11.1",
     "recharts": "^2.15.0",
     "shiki": "^1.24.2",
     "sonner": "^1.7.1",
