--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ NEXT_PUBLIC_POSTHOG_HOST="https://app.posthog.com"
 NEXT_PUBLIC_POSTHOG_KEY=""
 
 NEXT_PUBLIC_CD_API_URL=http://localhost:3011
+
+COMFYUI_FRONTEND_URL="https://comfyui.comfydeploy.com"
