--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "use-debounce": "^10.0.4",
     "use-resize-observer": "^9.1.0",
     "usehooks-ts": "^3.1.0",
+    "uuid": "^11.0.3",
     "vaul": "^1.1.2",
     "zustand": "^5.0.2"
   }
