--- a/package.json
+++ b/package.json
@@ -57,8 +57,10 @@
     "dayjs": "^1.11.13",
     "embla-carousel-react": "^8.5.1",
     "event-source-polyfill": "^1.0.31",
+    "fabric": "^6.5.3",
     "framer-motion": "^11.14.4",
     "json-diff-ts": "^4.1.0",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.468.0",
     "next-themes": "^0.4.4",
     "nuqs": "^2.2.3",
@@ -68,6 +70,7 @@
     "react-dom": "^19.0.0",
     "react-grid-layout": "^1.5.0",
     "react-hook-form": "^7.54.1",
+    "react-hotkeys-hook": "^4.6.1",
     "react-resizable-panels": "^2.1.7",
     "react-use-websocket": "^4.11.1",
     "recharts": "^2.15.0",
