--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@tanstack/react-router": "^1.89.2",
     "@tanstack/react-virtual": "^3.11.1",
     "@tanstack/router-devtools": "^1.89.2",
+    "@types/lodash": "^4.17.13",
     "comfyui-json": "^0.1.31",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
@@ -61,6 +62,7 @@
     "framer-motion": "^11.14.4",
     "json-diff-ts": "^4.1.0",
     "jszip": "^3.10.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.468.0",
     "next-themes": "^0.4.4",
     "nuqs": "^2.2.3",
