--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@biomejs/biome": "1.9.4",
     "@rsbuild/core": "^1.0.2",
     "@rsbuild/plugin-react": "^1.0.1",
+    "@rsdoctor/rspack-plugin": "^0.4.12",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/typography": "^0.5.15",
     "@tanstack/router-plugin": "^1.87.13",
