--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@tanstack/react-table": "^8.20.6",
     "@tanstack/react-virtual": "^3.11.1",
     "@tanstack/router-devtools": "^1.89.2",
+    "@types/semver": "^7.5.8",
     "class-variance-authority": "^0.7.1",
     "comfyui-json": "^0.1.31",
     "date-fns": "^4.1.0",
@@ -80,6 +81,7 @@
     "react-resizable-panels": "^2.1.7",
     "react-use-websocket": "^4.11.1",
     "recharts": "^2.15.0",
+    "semver": "^7.6.3",
     "shiki": "^1.24.2",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
