--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@tanstack/router-devtools": "^1.89.2",
     "@types/semver": "^7.5.8",
     "class-variance-authority": "^0.7.1",
+    "cmdk": "^1.0.4",
     "comfyui-json": "^0.1.31",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
