--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "typecheck": "tsc --noEmit",
     "dev": "rsbuild dev --port 3001",
     "build": "rsbuild build",
-    "preview": "rsbuild preview"
+    "preview": "rsbuild preview",
+    "format": "bunx biome format --write ."
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
