--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@tanstack/react-virtual": "^3.11.1",
     "@tanstack/router-devtools": "^1.89.2",
     "@types/semver": "^7.5.8",
+    "@date-fns/utc": "^2.1.0",
     "class-variance-authority": "^0.7.1",
     "cmdk": "^1.0.4",
     "comfyui-json": "^0.1.31",
