--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.20.2",
+    "@date-fns/utc": "^2.1.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
@@ -60,8 +61,8 @@
     "@tanstack/react-table": "^8.20.6",
     "@tanstack/react-virtual": "^3.11.1",
     "@tanstack/router-devtools": "^1.89.2",
+    "@types/lodash": "^4.17.14",
     "@types/semver": "^7.5.8",
-    "@date-fns/utc": "^2.1.0",
     "class-variance-authority": "^0.7.1",
     "cmdk": "^1.0.4",
     "comfyui-json": "^0.1.31",
@@ -73,6 +74,7 @@
     "framer-motion": "^11.14.4",
     "json-diff-ts": "^4.1.0",
     "jszip": "^3.10.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.468.0",
     "next-themes": "^0.4.4",
     "nuqs": "^2.2.3",
