--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "dependencies": {
-    "@clerk/clerk-react": "^5.20.2",
+    "@clerk/clerk-react": "5.22.11",
     "@date-fns/utc": "^2.1.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
