--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "rsbuild dev --port 3001",
     "build": "rsbuild build",
     "preview": "rsbuild preview",
-    "format": "bunx biome format --write ."
+    "format": "bunx biome format --write .",
+    "githooks": "./setup-githooks.sh"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
