--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.5",
+    "@react-three/drei": "^10.0.3",
+    "@react-three/fiber": "^9.0.4",
     "@tanstack/react-query": "^5.62.7",
     "@tanstack/react-query-devtools": "^5.62.7",
     "@tanstack/react-router": "^1.89.2",
@@ -93,6 +95,7 @@
     "shiki": "^1.24.2",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
+    "three": "^0.174.0",
     "use-debounce": "^10.0.4",
     "use-resize-observer": "^9.1.0",
     "usehooks-ts": "^3.1.0",
