--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "scripts": {
     "typecheck": "tsc --noEmit",
-    "dev": "rsbuild dev --port 3001",
-    "build": "rsbuild build",
-    "preview": "rsbuild preview",
+    "dev": "vite --port 3001",
+    "build": "vite build",
+    "preview": "vite preview",
     "format": "bunx biome format --write .",
     "githooks": "./setup-githooks.sh"
   },
@@ -22,13 +22,16 @@
     "@tanstack/router-plugin": "^1.87.13",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
-    "autoprefixer": "^10.4.20",
+    "@vitejs/plugin-react-swc": "^3.8.1",
+    "autoprefixer": "^10.4.21",
     "babel-plugin-react-compiler": "^19.0.0-beta-63e3235-20250105",
-    "postcss": "^8.4.49",
+    "postcss": "^8.5.3",
+    "postcss-import": "^16.1.0",
     "postcss-loader": "^8.1.1",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.16",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vite": "^6.2.2"
   },
   "dependencies": {
     "@clerk/clerk-react": "5.22.11",
