--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "react-hotkeys-hook": "^4.6.1",
     "react-resizable-panels": "^2.1.7",
     "react-use-websocket": "^4.11.1",
+    "reactflow": "^11.11.4",
     "recharts": "^2.15.0",
     "semver": "^7.6.3",
     "shiki": "^1.24.2",
