--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "react-grid-layout": "^1.5.0",
     "react-hook-form": "^7.54.1",
     "react-hotkeys-hook": "^4.6.1",
+    "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.7",
     "react-use-websocket": "^4.11.1",
     "reactflow": "^11.11.4",
