--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,8 @@
 {
   "rewrites": [
-    { "source": "/assets/(.*)", "destination": "/assets/$1" },
-    { "source": "/(.*)", "destination": "/index.html" }
-  ],
-  "headers": [
     {
-      "source": "/assets/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        },
-        { "key": "Access-Control-Allow-Origin", "value": "*" }
-      ]
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
