--- a/vercel.json
+++ b/vercel.json
@@ -5,23 +5,11 @@
       "destination": "/index.html"
     },
     {
-      "source": "/api/:path*",
-      "has": [
-        {
-          "type": "host",
-          "value": "staging.app.comfydeploy.com"
-        }
-      ],
+      "source": "/staging/api/:path*",
       "destination": "https://staging.api.comfydeploy.com/api/:path*"
     },
     {
       "source": "/api/:path*",
-      "has": [
-        {
-          "type": "host",
-          "value": "app.comfydeploy.com"
-        }
-      ],
       "destination": "https://api.comfydeploy.com/api/:path*"
     }
   ]
