--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,16 @@
 {
   "rewrites": [
     {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    },
-    {
       "source": "/staging/api/:path*",
       "destination": "https://staging.api.comfydeploy.com/api/:path*"
     },
     {
       "source": "/api/:path*",
       "destination": "https://api.comfydeploy.com/api/:path*"
+    },
+    {
+      "source": "/((?!api|staging/api).*)",
+      "destination": "/index.html"
     }
   ]
 }
