--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,27 @@
 {
   "rewrites": [
     {
-      "source": "/staging/api/:path*",
+      "source": "/api/:path*",
+      "has": [
+        {
+          "type": "host",
+          "value": "staging.app.comfydeploy.com"
+        }
+      ],
       "destination": "https://staging.api.comfydeploy.com/api/:path*"
     },
     {
       "source": "/api/:path*",
+      "has": [
+        {
+          "type": "host",
+          "value": "app.comfydeploy.com"
+        }
+      ],
       "destination": "https://api.comfydeploy.com/api/:path*"
     },
     {
-      "source": "/((?!api|staging/api).*)",
+      "source": "/(.*)",
       "destination": "/index.html"
     }
   ]
