--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "5.31.8",
+    "@clerk/themes": "^2.2.32",
     "@date-fns/utc": "^2.1.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
