--- a/biome.json
+++ b/biome.json
@@ -1,20 +1,16 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.2.0/schema.json",
   "vcs": {
     "enabled": false,
     "clientKind": "git",
     "useIgnoreFile": false
   },
   "files": {
-    "ignoreUnknown": false,
-    "ignore": []
+    "ignoreUnknown": false
   },
   "formatter": {
     "enabled": true,
     "indentStyle": "space"
-  },
-  "organizeImports": {
-    "enabled": false
   },
   "linter": {
     "enabled": true,
@@ -22,7 +18,8 @@
       "style": {
         "useSelfClosingElements": {
           "level": "error",
-          "fix": "safe"
+          "fix": "safe",
+          "options": {}
         }
       },
       "recommended": true,
