--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,10 @@
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_your_clerk_publishable_key_here
 
 # Clerk Redirect URLs (Optional)
-NEXT_PUBLIC_CLERK_SIGN_UP_FORCE_REDIRECT_URL=/workflows
-NEXT_PUBLIC_CLERK_SIGN_IN_FORCE_REDIRECT_URL=/workflows
-NEXT_PUBLIC_CLERK_SIGN_UP_FALLBACK_REDIRECT_URL=
-NEXT_PUBLIC_CLERK_SIGN_IN_FALLBACK_REDIRECT_URL=
+NEXT_PUBLIC_CLERK_SIGN_UP_FORCE_REDIRECT_URL=https://app.comfydeploy.com/workflows
+NEXT_PUBLIC_CLERK_SIGN_UP_FALLBACK_REDIRECT_URL=https://app.comfydeploy.com/workflows
+NEXT_PUBLIC_CLERK_SIGN_IN_FORCE_REDIRECT_URL=https://app.comfydeploy.com/workflows
+NEXT_PUBLIC_CLERK_SIGN_IN_FALLBACK_REDIRECT_URL=https://app.comfydeploy.com/workflows
 
 # API Configuration
 NEXT_PUBLIC_CD_API_URL=http://localhost:3011
