vite for posthog

--- a/.env.example
+++ b/.env.example
@@ -12,8 +12,8 @@ NEXT_PUBLIC_CD_API_URL=http://localhost:3011
 NEXT_PUBLIC_NGROK_CD_API_URL=
 
 # PostHog Analytics (Optional)
-NEXT_PUBLIC_POSTHOG_KEY=phc_your_posthog_project_key_here
-NEXT_PUBLIC_POSTHOG_HOST=https://app.posthog.com
+VITE_PUBLIC_POSTHOG_KEY=phc_your_posthog_project_key_here
+VITE_PUBLIC_POSTHOG_HOST=https://us.i.posthog.com
 
 # ComfyUI Configuration
 COMFYUI_FRONTEND_URL=https://comfyui.comfydeploy.com
