--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@rsbuild/plugin-babel": "^1.0.3",
     "@rsbuild/plugin-react": "^1.1.0",
     "@rsdoctor/rspack-plugin": "^0.4.12",
+    "@simbathesailor/use-what-changed": "^2.0.0",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/typography": "^0.5.15",
     "@tanstack/router-plugin": "^1.87.13",
