--- a/railway.toml
+++ b/railway.toml
@@ -3,7 +3,7 @@ builder = "nixpacks"
 buildCommand = "bun run build"
 
 [deploy]
-startCommand = "bun run server.ts"
-healthcheckPath = "/"
+startCommand = "caddy run --config Caddyfile --adapter caddyfile"
+healthcheckPath = "/health"
 healthcheckTimeout = 100
 restartPolicyType = "never"
