--- a/Caddyfile
+++ b/Caddyfile
@@ -23,11 +23,10 @@
     # health check for railway
     rewrite /health /*
 
-    # API proxy - must come before file_server to take precedence
-    route /api/* {
-        reverse_proxy https://prod-staging.api.comfydeploy.com {
-            header_up Host {upstream_hostport}
-        }
+    # API routes - handle before any static file serving
+    @api path /api/*
+    reverse_proxy @api https://prod-staging.api.comfydeploy.com {
+        header_up Host {upstream_hostport}
     }
 
     # serve from the 'dist' folder (Vite builds into the 'dist' folder)
