--- a/Caddyfile
+++ b/Caddyfile
@@ -23,21 +23,16 @@
     # health check for railway
     rewrite /health /*
 
-    # API routes - handle before any static file serving
-    @api path /api/*
-    reverse_proxy @api https://prod-staging.api.comfydeploy.com {
+    # API proxy - explicit order to ensure it comes first
+    reverse_proxy /api/* https://prod-staging.api.comfydeploy.com {
         header_up Host {upstream_hostport}
     }
 
-    # serve from the 'dist' folder (Vite builds into the 'dist' folder)
-    root * dist
-
-    # enable gzipping responses
-    encode gzip
-
-    # serve files from 'dist'
-    file_server
-
-    # if path doesn't exist, redirect it to 'index.html' for client side routing
-    try_files {path} /index.html
+    # Static files - served only if not an API route
+    handle {
+        root * dist
+        encode gzip
+        file_server
+        try_files {path} /index.html
+    }
 }
