--- a/Caddyfile
+++ b/Caddyfile
@@ -30,7 +30,7 @@
     # This prevents try_files from running before reverse_proxy
     route {
         # API proxy - must come first
-        reverse_proxy /api/* prod-staging.api.comfydeploy.com:443 {
+        reverse_proxy /api/* https://prod-staging.api.comfydeploy.com {
             transport http {
                 tls
             }
