--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,16 @@
     },
     {
       "source": "/api/:path*",
+      "has": [
+        {
+          "type": "host",
+          "value": "beta.app.comfydeploy.com"
+        }
+      ],
+      "destination": "https://prod-staging.api.comfydeploy.com/api/:path*"
+    },
+    {
+      "source": "/api/:path*",
       "destination": "https://staging.api.comfydeploy.com/api/:path*"
     },
     {
