update env example

--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,10 @@
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_your_clerk_publishable_key_here
 
 # Clerk Redirect URLs (Optional)
-NEXT_PUBLIC_CLERK_SIGN_UP_FORCE_REDIRECT_URL=https://app.comfydeploy.com/workflows
-NEXT_PUBLIC_CLERK_SIGN_UP_FALLBACK_REDIRECT_URL=https://app.comfydeploy.com/workflows
-NEXT_PUBLIC_CLERK_SIGN_IN_FORCE_REDIRECT_URL=https://app.comfydeploy.com/workflows
-NEXT_PUBLIC_CLERK_SIGN_IN_FALLBACK_REDIRECT_URL=https://app.comfydeploy.com/workflows
+# NEXT_PUBLIC_CLERK_SIGN_UP_FORCE_REDIRECT_URL=https://app.comfydeploy.com/workflows
+# NEXT_PUBLIC_CLERK_SIGN_UP_FALLBACK_REDIRECT_URL=https://app.comfydeploy.com/workflows
+# NEXT_PUBLIC_CLERK_SIGN_IN_FORCE_REDIRECT_URL=https://app.comfydeploy.com/workflows
+# NEXT_PUBLIC_CLERK_SIGN_IN_FALLBACK_REDIRECT_URL=https://app.comfydeploy.com/workflows
 
 # API Configuration
 NEXT_PUBLIC_CD_API_URL=http://localhost:3011
@@ -16,8 +16,8 @@ VITE_PUBLIC_POSTHOG_KEY=phc_your_posthog_project_key_here
 VITE_PUBLIC_POSTHOG_HOST=https://us.i.posthog.com
 
 # ComfyUI Configuration
-COMFYUI_FRONTEND_URL=https://comfyui.comfydeploy.com
-COMFY_DEPLOY_SHARED_MACHINE_API_URL=
+# COMFYUI_FRONTEND_URL=https://comfyui.comfydeploy.com
+# COMFY_DEPLOY_SHARED_MACHINE_API_URL=
 
 # Internal API Key (for backend communication)
-COMFY_DEPLOY_API_KEY=your_internal_api_key_here
+# COMFY_DEPLOY_API_KEY=your_internal_api_key_here
